fix import merge when existing products